encoding/jsonschema/testdata/generate/closedness_nondef.txtar
# Tests for non-definition reference closedness.
# When a definition's body is solely a reference to a non-definition,
# the definition should still be closed.
#
# BUG: WrapsHidden and WrapsShared should have additionalProperties: false
# because they're definitions. Currently they're just a $ref to the
# open non-definition, losing closedness.
-- test.cue --
package test

#WrapsHidden: _hidden

_hidden: {
	h?: int
}

_shared: {
	v?: int
}

#WrapsShared: _shared
#WrapsConjunction: _shared & _hidden
#WrapsConjunctionOfDisjunctions: ({h?: int} | int) & ({v?: int} | int)

t01?: #WrapsHidden
t02open?: _shared
t02closed?: #WrapsShared
t03closed?: #WrapsConjunction
t03open?: _shared & _hidden
t04closed?: #WrapsConjunctionOfDisjunctions
t04open?: ({h?: int} | int) & ({v?: int} | int)

-- datatest/testdata.cue --
package datatest
hiddenValid: {
	data: {t01: {h: 1}}
}
// BUG: this should not be accepted. #WrapsHidden is a definition
// wrapping an open non-definition. The definition should be closed,
// but the generated schema just uses $ref to the open non-definition,
// losing closedness.
hiddenExtra: {
	data: {t01: {h: 1, extra: true}}
}
sharedOpenExtra: {
	data: {t02open: {v: 1, extra: true}}
}
sharedClosedValid: {
	data: {t02closed: {v: 1}}
}
// BUG: this should not be accepted (same issue as hiddenExtra).
sharedClosedExtra: {
	data: {t02closed: {v: 1, extra: true}}
}
conjunctionOpenExtra: {
	data: {t03open: {h: 1, v: 1, extra: true}}
}
// BUG: this correctly rejects extra properties, but the generated schema
// is structurally wrong: additionalProperties: false sits alongside $ref
// with no local properties, rejecting all fields rather than only extra ones.
conjunctionClosedExtra: {
	data:  {t03closed: {h: 1, v: 1, extra: true}}
	error: true
}
conjunctionOfDisjunctionsOpenExtra: {
	data: {t04open: {h: 1, v: 1, extra: true}}
}
// BUG: this incorrectly allows extra fields, but fixing that requires
// a deeper fix: lifting properties to the top level so they're all in one place.
conjunctionOfDisjunctionsClosedExtra: {
	data: {t04closed: {h: 1, v: 1, extra: true}}
}
conjunctionOfDisjunctionsClosedExtra: {
	data: {t04closed: {h: 1, v: 1}}
}
-- out/generate-v3/schema --
{
	$schema: "https://json-schema.org/draft/2020-12/schema"
	$defs: {
		WrapsConjunction: {
			allOf: [{
				$ref: "#/$defs/_hidden"
			}, {
				type:                 "object"
				additionalProperties: false
				$ref:                 "#/$defs/_shared"
			}]
		}
		WrapsConjunctionOfDisjunctions: {
			allOf: [{
				anyOf: [{
					type: "object"
					properties: {
						v: {
							type: "integer"
						}
					}
				}, {
					type: "integer"
				}]
			}, {
				anyOf: [{
					type: "object"
					properties: {
						h: {
							type: "integer"
						}
					}
				}, {
					type: "integer"
				}]
			}]
		}
		WrapsHidden: {
			$ref: "#/$defs/_hidden"
		}
		WrapsShared: {
			$ref: "#/$defs/_shared"
		}
		"_hidden": {
			type: "object"
			properties: {
				h: {
					type: "integer"
				}
			}
		}
		"_shared": {
			type: "object"
			properties: {
				v: {
					type: "integer"
				}
			}
		}
	}
	type: "object"
	properties: {
		t01: {
			$ref: "#/$defs/WrapsHidden"
		}
		t02closed: {
			$ref: "#/$defs/WrapsShared"
		}
		t02open: {
			$ref: "#/$defs/_shared"
		}
		t03closed: {
			$ref: "#/$defs/WrapsConjunction"
		}
		t03open: {
			allOf: [{
				$ref: "#/$defs/_hidden"
			}, {
				type: "object"
				$ref: "#/$defs/_shared"
			}]
		}
		t04closed: {
			$ref: "#/$defs/WrapsConjunctionOfDisjunctions"
		}
		t04open: {
			allOf: [{
				anyOf: [{
					type: "object"
					properties: {
						v: {
							type: "integer"
						}
					}
				}, {
					type: "integer"
				}]
			}, {
				anyOf: [{
					type: "object"
					properties: {
						h: {
							type: "integer"
						}
					}
				}, {
					type: "integer"
				}]
			}]
		}
	}
}
-- out/generate-v3/hiddenValid --
-- out/generate-v3/hiddenExtra --
-- out/generate-v3/sharedOpenExtra --
-- out/generate-v3/sharedClosedValid --
-- out/generate-v3/sharedClosedExtra --
-- out/generate-v3/conjunctionClosedExtra --
conjunctionClosedExtra.data.t03closed: invalid value {h:1,v:1,extra:true} (does not satisfy matchN): 1 matched, expected 2:
    1:88
    ./datatest/testdata.cue:29:21
    1:792
conjunctionClosedExtra.data.t03closed.extra: field not allowed:
    1:88
    ./datatest/testdata.cue:29:41
conjunctionClosedExtra.data.t03closed.h: field not allowed:
    1:88
    ./datatest/testdata.cue:29:25
conjunctionClosedExtra.data.t03closed.v: field not allowed:
    1:88
    ./datatest/testdata.cue:29:31
    1:592
-- out/generate-v3/conjunctionOpenExtra --
-- out/generate-v3/conjunctionOfDisjunctionsClosedExtra --
-- out/generate-v3/conjunctionOfDisjunctionsOpenExtra --
